--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
             </div>
         </div>
     </div>
-    <script src="https://tugceakin.github.io/js/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.scrollTo.js"></script>
     <script src="js/jquery.nav.js"></script>
