Contact Me text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <a href="https://www.linkedin.com/in/tuğçe-akın-528886a5" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
 
                 </div>
-                <a href="#page-contact" class="btn btn-default hire-me">Hire Me</a>
+                <a href="#page-contact" class="btn btn-default hire-me">Contact Me</a>
             </div>
         </div>
     </section>
