--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="spacer"></div>
-                <h2 class="col-md-10 col-md-offset-1">Sensor Magagement System</h2>
+                <h2 class="col-md-10 col-md-offset-1">Sensor Management System</h2>
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                       <div class="portfolio-pr-image project-image col-md-4">
