Fix sticky navbar hover color bug

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="col-sm-8 center">
-                    <div id="email"><a href="mailto:tugceakinsf@gmail.com" target="_top">Send Email</a></div>
+                    <div id="email"><a href="mailto:tugceakinsf@gmail.com" target="_top">Shoot me an email</a></div>
                 </div>
             </div>
             <!-- End row -->
