Add Google verification

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tugce Akin - Portfolio</title>
-    <meta name="description" content="">
+    <meta name="description" content="Portfolio of Tugce Akin - Full Stack Developer from the Bay Area.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-
+    <meta name="google-site-verification" content="la68fI3avETWVH50hhwNKL6j9Q3yOsupEsHKJzyvxeA" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- Bootstrap core CSS -->
@@ -179,10 +179,10 @@
                 <div class="row">
                     <div class=" col-md-10 col-md-offset-1">
                       <div class="portfolio-pr-desc col-md-7">
-                        <p> Customizable lineup builder for football. Built with ReactJS. </p>
+                        <p> Customizable football formation and tactics creator. Built with ReactJS. </p>
                         <button class="btn btn-primary btn-lg"  data-toggle="modal" data-target="#lineupModal">Read More</button>
                         <a class="btn btn-primary btn-lg" target="_blank" style="color: white"
-                        href="https://drive.google.com/open?id=0BylWqyyyM-SpMmJzaGJFVWxqUUU" >Watch Demo</a>
+                        href="https://www.buildlineup.com" >Visit Web App</a>
 
                       </div>
                       <div class="portfolio-pr-image project-image col-md-4">
