fix menu scroll

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <div class="container">
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav" id="main-menu">
-                    <li><a href="#page-welcome">Home</a>
+                    <li><a href="javascript:;" data-scroll="page-welcome">Home</a>
                     </li>
-                    <li><a href="#page-profile">Profile</a>
+                    <li><a href="javascript:;" data-scroll="page-profile">Profile</a>
                     </li>
-                    <li><a href="#page-experience">Experience</a>
+                    <li><a href="javascript:;" data-scroll="page-experience">Experience</a>
                     </li>
-                    <li><a href="#page-port">Portfolio</a>
+                    <li><a href="javascript:;" data-scroll="page-port">Portfolio</a>
                     </li>
-                    <li><a href="#page-contact">Contact</a>
+                    <li><a href="javascript:;" data-scroll="page-contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
     </section>
     <!-- welcome ends -->
     <!-- profile begins -->
-    <section id="page-profile" class="page-profile">
+    <section id="page-profile" name="page-profile" class="page-profile">
         <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Personal Profile</h2>
